.provarCaches/00D410000011HE0EAM/objects/rstk__soentto__c.object
<CustomObject>
    <description>soentto__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <description>External id field</description>
        <externalId>true</externalId>
        <inlineHelpText>External id field</inlineHelpText>
        <label>externalid</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Left(rstk__soentto_soprod__r.rstk__externalid__c &amp; &apos;-&apos; &amp; rstk__soentto_entprod__r.rstk__externalid__c, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>Left(rstk__soentto_soprod__r.rstk__soprod_prod__c &amp; &apos;(&apos; &amp; rstk__soentto_entprod__r.rstk__soprod_prod__c + &apos;)&apos;, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Grid</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_effective_date_end__c</fullName>
        <inlineHelpText>Date the Entitled to entity ceases to be effective.</inlineHelpText>
        <label>End Effective Date for Entitlement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_effective_date_start__c</fullName>
        <inlineHelpText>Date the Entitled to entity becomes effective.</inlineHelpText>
        <label>Start Effective Date for Entitlement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_entprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Grid</inlineHelpText>
        <label>Entitled To Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Entitlement To Details</relationshipLabel>
        <relationshipName>soenttos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_entprodascat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Category for this Entitlement.</inlineHelpText>
        <label>Product Entitlement Cat Entitled To</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Entitlement To Details (Product Entitlement Cat Entitled To)</relationshipLabel>
        <relationshipName>soentto3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_entprodasprodgroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Product Group for this Entitlement.</inlineHelpText>
        <label>Product Entitlement ProdGroup Entitld To</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Entitlement To Details (Product Entitlement ProdGroup Entitld To)</relationshipLabel>
        <relationshipName>soenttos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_entprodassubcat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Sub Category for this Entitlement.</inlineHelpText>
        <label>product entitlement subcat entitled to</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Entitlement To Details (product entitlement subcat entitled to)</relationshipLabel>
        <relationshipName>soenttos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_entqtymultiplier__c</fullName>
        <inlineHelpText>Entitlement Quantity Limit Multiplier.</inlineHelpText>
        <label>Entitlement Quantity Limit Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_interval__c</fullName>
        <inlineHelpText>The time interval used with this Entitlement Product</inlineHelpText>
        <label>Entitlement Interval</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentto_soprod__c</fullName>
        <inlineHelpText>Grid</inlineHelpText>
        <label>Entitlement Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Entitlement To Details (Entitlement Product)</relationshipLabel>
        <relationshipName>msoenttos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Entitlement To Detail</label>
    <listViews>
        <fullName>rstk__RS_Entitlement_To_Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__soentto_soprod__c</columns>
        <columns>rstk__soentto_entprod__c</columns>
        <columns>rstk__soentto_active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Entitlement To Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement To Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>